corrected hero page overflow

--- a/statics/css/style.scss
+++ b/statics/css/style.scss
@@ -1223,9 +1223,9 @@
       }
 
       img{
-        margin-top: 10em;
+        margin-top: 3em;
         width: 100% !important;
-      
+      float: right;
        margin-bottom: 3em;
        
       }
